--- a/index.html
+++ b/index.html
@@ -303,9 +303,17 @@
                     <span>happy customer</span>
                 </div>
             </div>
+            <div class="box">
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
             <span class="fa-solid fa-quote-right"><span>
         </div>
- </section>
+    </section>
 <!-- Reviews section ends -->
 </body>
 </html>
