added new img attribute

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1 class="heading"><span>about</span> us</h1>
     <div class="row">
         <div class="image-container">
-            <img src="./imgs/medium-shot-woman-with-beautiful-sunflowers.jpg" alt="">
+            <img src="./imgs/medium-shot-woman-with-beautiful-sunflowers.jpg" alt="" loading="lazy">
             <h3>best flower sellers</h3>
         </div>
         <div class="content">
@@ -64,28 +64,28 @@
 <!-- Icons section starts -->
 <section class="icons-container">
     <div class="icons">
-        <img src="./imgs/money.png" alt="">
+        <img src="./imgs/money.png" alt="" loading="lazy">
         <div class="info">
             <h3>10 days return</h3>
             <span>money back warranty</span>
         </div>
     </div>
     <div class="icons">
-        <img src="./imgs/delivery.png" alt="">
+        <img src="./imgs/delivery.png" alt="" loading="lazy">
         <div class="info">
             <h3>free delivery</h3>
             <span>on all orders</span>
         </div>
     </div>
     <div class="icons">
-        <img src="./imgs/party.png" alt="">
+        <img src="./imgs/party.png" alt="" loading="lazy">
         <div class="info">
             <h3>offer & gifts</h3>
             <span>on all orders</span>
         </div>
     </div>
     <div class="icons">
-        <img src="./imgs/credit-cards.png" alt="">
+        <img src="./imgs/credit-cards.png" alt="" loading="lazy">
         <div class="info">
             <h3>secure payment</h3>
             <span>on all orders</span>
@@ -101,7 +101,7 @@
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="./imgs/flower.jpg" alt="">
+                <img src="./imgs/flower.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -117,7 +117,7 @@
         <div class="box">
             <span class="discount">-15%</span>
             <div class="image">
-                <img src="./imgs/beautiful-violet-flowers.jpg" alt="">
+                <img src="./imgs/beautiful-violet-flowers.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -133,7 +133,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="./imgs/flower.jpg" alt="">
+                <img src="./imgs/flower.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -149,7 +149,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="imgs/flower4.jpg" alt="">
+                <img src="imgs/flower4.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -165,7 +165,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="./imgs/flower5.jpg" alt="">
+                <img src="./imgs/flower5.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -181,7 +181,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="imgs/flower6.jpg" alt="">
+                <img src="imgs/flower6.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -197,7 +197,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="imgs/flower.jpg" alt="">
+                <img src="imgs/flower.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -213,7 +213,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="./imgs/beautiful-violet-flowers.jpg" alt="">
+                <img src="./imgs/beautiful-violet-flowers.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -229,7 +229,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="imgs/flower.jpg" alt="">
+                <img src="imgs/flower.jpg" alt="" loading="lazy">
                 <div class="icons">
                     <a href=""><i class="fa-solid fa-heart"></i></a>
                     <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
@@ -259,7 +259,7 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit obcaecati nemo? Ipsum recusandae cupiditate cum dignissimos accusamus magnam vel, dicta repudiandae iusto nobis voluptates enim consequuntur, totam eum obcaecati!</p>
                 <div class="user">
-                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="">
+                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="" loading="lazy">
                     <div class="user-info">
                         <h3>alex dowell</h3>
                         <span>happy customer</span>
@@ -278,9 +278,9 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit obcaecati nemo? Ipsgvv cvcc vvv nissimos accusamus magnam vel, dicta repudiandae iusto nobis voluptates enim consequuntur, totam eum obcaecati!</p>
                 <div class="user">
-                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="">
+                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="" loading="lazy">
                     <div class="user-info">
-                    <h3>alex dowell</h3>
+                    <h3>jane jason</h3>
                     <span>happy customer</span>
                     </div>
                 </div>
@@ -297,9 +297,9 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa impedit obcaecati nemo? Ipsgvv cvcc vvv nissimos accusamus magnam vel, dicta repudiandae iusto nobis voluptates enim consequuntur, totam eum obcaecati!</p>
                 <div class="user">
-                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="">
+                    <img src="./imgs/2523af5281e0a2d50d5953e2befa4d73.jpg" alt="" loading="lazy">
                 <div class="user-info">
-                    <h3>alex dowell</h3>
+                    <h3>john doe</h3>
                     <span>happy customer</span>
                 </div>
             </div>
