--- a/index.html
+++ b/index.html
@@ -307,5 +307,19 @@
         </div>
     </section>
 <!-- Reviews section ends -->
+<!-- Contact section starts -->
+ <section class="contact" id="contact">
+    <h1 class="heading">contact <span>us</span></h1>
+    <div class="row">
+        <form action="" >
+            <input type="text" placeholder="name" class="box">
+            <input type="email" placeholder="email" class="box">
+            <input type="number" placeholder="number" class="box">
+            <textarea name="" id="" class="box" placeholder="message" cols="30" rows="10"></textarea>
+            <input type="submit" value="send mesage" class="btn">
+        </form>
+    </div>
+ </section>
+<!-- Contact section ends -->
 </body>
 </html>
