added contact page

--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
             <textarea name="" id="" class="box" placeholder="message" cols="30" rows="10"></textarea>
             <input type="submit" value="send mesage" class="btn">
         </form>
+
+        <div class="image">
+            <img src="./imgs/13454553_5252480.jpg" alt="">
+        </div>
     </div>
  </section>
 <!-- Contact section ends -->
