added footer section

--- a/index.html
+++ b/index.html
@@ -320,10 +320,50 @@
         </form>
 
         <div class="image">
-            <img src="./imgs/13454553_5252480.jpg" alt="">
+            <img src="./imgs/13454553_5252480.jpg" alt="" loading="lazy">
         </div>
     </div>
  </section>
 <!-- Contact section ends -->
+<!-- Footer section starts -->
+ <section class="footer">
+    <div class="box-con">
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">about</a>
+            <a href="#">products</a>
+            <a href="#">reviews</a>
+            <a href="#">contact</a>
+        </div>
+
+        <div class="box">
+            <h3>more links</h3>
+            <a href="#">accounts</a>
+            <a href="#">orders</a>
+            <a href="#">chart</a>
+            <a href="#">my favourite</a>
+        </div>
+
+        <div class="box">
+            <h3>loctions</h3>
+            <a href="#">nigeria</a>
+            <a href="#">canada</a>
+            <a href="#">algeria</a>
+            <a href="#">USA</a>
+            <a href="#">south korea</a>
+        </div>
+        <div class="box">
+            <h3>contact info</h3>
+            <a href="#">+234-8086-7245-30</a>
+            <a href="#">udesire20@gmail.com</a>
+            <a href="#">ikeja, lagos</a>
+            <img src="./imgs/kindpng_480088.png" alt="">
+        </div>
+    </div>
+
+    <div class="credit"></div>
+ </section>
+ <!-- Footer section ends -->
 </body>
 </html>
