added footer section

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 <!-- Contact section ends -->
 <!-- Footer section starts -->
  <section class="footer">
-    <div class="box-con">
+    <div class="box-container">
         <div class="box">
             <h3>quick links</h3>
             <a href="#">home</a>
@@ -362,7 +362,7 @@
         </div>
     </div>
 
-    <div class="credit"></div>
+    <div class="credit">developed by <span>deedev</span> all rights reserved</div>
  </section>
  <!-- Footer section ends -->
 </body>
